Fix overlapping cars by recalculating positions after add/remove